--- a/beamertheme-light-example.tex
+++ b/beamertheme-light-example.tex
@@ -1,12 +1,11 @@
 \documentclass[10pt, compress]{beamer}
-
-\usepackage[english]{babel}
-\usepackage[green]{beamertheme-light}
-
+\usepackage{fontspec}
+\newfontfamily\mrfnt[Script=Devanagari,Renderer=HarfBuzz]{Mukta-Regular.ttf}
+\usetheme{light}
 \title[The package \texttt{light}]{Colored beamer layout \\ with \texttt{beamertheme-light}}
-\author[F. Vergnet and V. Goepp]{F. Vergnet$^\dagger$ and V. Goepp$^{\ddagger}$}
-\institute{$\dagger$ : LMO, Universit\'e Paris-Sud, Universit\'e Paris-Saclay,  \\ $\ddagger$ : MAP5, Universit\'e Paris-Descartes}
-\date{Package version 1.1 (12/11/2024)}
+\author[F. Vergnet and V. Goepp and {\mrfnt निरंजन}]{F. Vergnet$^\dagger$ \and V. Goepp$^{\ddagger}$ \and {\mrfnt निरंजन}$^{\ast}$}
+\institute{$\dagger$ : LMO, Universit\'e Paris-Sud, Universit\'e Paris-Saclay,  \\ $\ddagger$ : MAP5, Universit\'e Paris-Descartes,\\$\ast$:  {\mrfnt मुंबई विद्यापीठ, कालिना}}
+\date{Package version 1.2 (2024/12/09)}
 
 \begin{document}
 
