--- a/README
+++ b/README
@@ -5,8 +5,9 @@ A usage guide is given in beamertheme-light-example.pdf.
 
 Please send enhancements and corrections to: 
 Fabien Vergnet, f.j.vergnet@gmail.com, or
-Vivien Goepp, vivien.goepp@gmail.com
+Vivien Goepp, vivien.goepp@gmail.com, or
+निरंजन, hi.niranjan@pm.me
 
-12/11/2024
-Package version 1.1
+2024/12/09
+Package version 1.2
 This package is licensed under the General Public License version 3 (GPL3).
