--- a/beamertheme-light-example.tex
+++ b/beamertheme-light-example.tex
@@ -1,3 +1,10 @@
+%%%%% Example for ``beamerthemelight'': a colored beamer theme %%%%%
+%%%%% Authors: Fabien Vergnet and Vivien Goepp %%%%%
+%%%%% Contact: f.j.vergnet@gmail.com and vivien.goepp@gmail.com %%%%%
+%%%%% Special thanks to: निरंजन <hi.niranjan@pm.me> %%%%%
+%%%%% Repository: https://github.com/goepp/beamertheme-light/ %%%%%
+%%%%% Package version 1.2 (18/12/2024) %%%%%
+%%%%% License: GNU General Public License, version 3
 \documentclass[10pt, compress]{beamer}
 \usepackage{fontspec}
 \newfontfamily\mrfnt[Script=Devanagari,Renderer=HarfBuzz]{Mukta-Regular.ttf}
@@ -5,7 +12,7 @@
 \title[The package \texttt{light}]{Colored beamer layout \\ with \texttt{beamertheme-light}}
 \author[F. Vergnet and V. Goepp and {\mrfnt निरंजन}]{F. Vergnet$^\dagger$ \and V. Goepp$^{\ddagger}$ \and {\mrfnt निरंजन}$^{\ast}$}
 \institute{$\dagger$ : LMO, Universit\'e Paris-Sud, Universit\'e Paris-Saclay,  \\ $\ddagger$ : MAP5, Universit\'e Paris-Descartes,\\$\ast$:  {\mrfnt मुंबई विद्यापीठ, कालिना}}
-\date{Package version 1.2 (2024/12/09)}
+\date{Package version 1.2 (2024/12/18)}
 
 \begin{document}
 
