--- a/beamerthemelight.sty
+++ b/beamerthemelight.sty
@@ -1,3 +1,10 @@
+%%%%% Theme ``beamerthemelight'': a colored beamer theme %%%%%
+%%%%% Authors: Fabien Vergnet and Vivien Goepp %%%%%
+%%%%% Contact: f.j.vergnet@gmail.com and vivien.goepp@gmail.com %%%%%
+%%%%% Special thanks to: निरंजन <hi.niranjan@pm.me> %%%%%
+%%%%% Repository: https://github.com/goepp/beamertheme-light/ %%%%%
+%%%%% Package version 1.2 (18/12/2024) %%%%%
+%%%%% License: GNU General Public License, version 3
 \mode<presentation>
 
 %%%%% Define colors %%%%%
